[package]
name = "matthew-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-compat = "0.2.5"
axum = "0.8.6"
matthew = { path = "../lib", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
