[package]
name = "matthew"
version = "0.1.0"
edition = "2024"

[features]
default = ["syn"]
serde = ["dep:serde"]
syn = ["dep:syn"]

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0", optional = true, features = ["derive"] }
syn = { version = "2.0", optional = true, default-features = false, features = [
  "visit",
  "full",
  "parsing",
] }
